<resources>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，返回状态错误</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_download_error">下载失败</string>
    <string name="app_download_complete">下载完成，点击安装。</string>
    <string name="app_download_start">开始下载</string>
    <string name="app_download_open">下载完成，点击打开。</string>
    <string name="app_downloading">%s正在下载</string>
    <string name="app_find_new">发现新版本</string>
    <string name="app_current_is_new">当前版本已是最新版本，版本号是：%s</string>
    <string name="app_show_message">当前有新版本，版本号是：%1$s，已安装版本是：%2$s</string>
    <string name="app_find_new_title">发现新版本: %s</string>
    <string name="app_message">修复bug</string>
    <string name="app_ok">立即更新</string>
    <string name="app_cancel">以后再说</string>
    <string name="app_quit">退出</string>
    <string name="tools_time_1">刚刚</string>
    <string name="tools_time_2">1分钟前</string>
    <string name="tools_time_3">%d分钟前</string>
    <string name="tools_time_4">1小时前</string>
    <string name="tools_time_5">%d小时前</string>
    <string name="tools_time_6">昨天</string>
    <string name="tools_time_7">%d天前</string>
    <string name="pick_photo">选择图片</string>
    <string name="pick_video">选择视频</string>
    <string name="pick_no_sdcard">选择视频</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_pause_notification_prefix">暂停:</string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="umeng_common_icon">icon</string>
    <string name="article_source">掌握健康</string>
    <string name="article_source_web">http://ucmed.cn/zwjk.htm</string>
    <string name="search_edit_hint">请输入关键字</string>
    <string name="search_empty_toast">搜索条件不能为空</string>
    <string name="list_end_load_text">正在加载数据…</string>
    <string name="disclaimer_1">法律声明</string>
    <string name="disclaimer_2">本法律声明阐述之条款和条件适用于所有使用****手机客户端的用户。</string>
    <string name="disclaimer_3">****手机客户端(以下简称“本软件”)；****医院（以下简称“本院”）。</string>
    <string name="disclaimer_4">版权声明</string>
    <string name="disclaimer_5">本软件受《中华人民共和国著作权法》 、 《计算机软件保护条例》和相关的国际条约以及其他的法律法规保护，任何单位和个人未经本院授权不能拷贝、制作、修改、破解、出售、交易、转售、再发布本软件及其任何部分，或对本软件或本软件的任何部分创作衍生作品，进行反工程、反编辑或试图从本软件或本软件的任何部分提取源代码，但法律明确允许或要求的或本软件特别书面告知您的除外。否则将视为非法侵害，本院保留依法追究其责任的权利。</string>
    <string name="disclaimer_6">杭州卓健信息科技有限公司已将本软件的所有使用权授权予本院。</string>
    <string name="disclaimer_7">本软件最终版权归杭州卓健信息科技有限公司所有。</string>
    <string name="disclaimer_8">隐私保护</string>
    <string name="disclaimer_9">1、保护用户隐私是本软件的一项基本政策。“隐私”是指用户在注册账号时提供给本软件的个人身份信息，包括用户注册资料中的姓名、性别、个人有效身份证件号码、联系方式、家庭住址等。本软件保证不对外公开或向第三方提供用户注册资料及用户在使用网络服务时存储在本软件的非公开内容，但下列情况除外：</string>
    <string name="disclaimer_10">（1）用户或用户监护人授权本软件披露的；</string>
    <string name="disclaimer_11">（2）应用户监护人的合法要求而提供用户个人身份信息时；</string>
    <string name="disclaimer_12">（3）有关法律要求本软件披露的；</string>
    <string name="disclaimer_13">（4）司法机关或行政机关基于法定程序要求本软件提供的；</string>
    <string name="disclaimer_14">（5）本软件为了维护自己合法权益而向用户提起诉讼或者仲裁时；</string>
    <string name="disclaimer_15">（6）本软件出于软件正常应用、学术交流及讨论的目的时。</string>
    <string name="disclaimer_16">2、本软件可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与本软件同等的保护用户隐私的责任，则本软件可将用户的注册资料（包括姓名、性别、个人有效身份证件号码、联系方式、家庭住址等）提供给该第三方。</string>
    <string name="disclaimer_17">3、在不透露单个用户隐私资料的前提下，本软件有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。</string>
    <string name="disclaimer_18">免责声明</string>
    <string name="disclaimer_19">1、郑重提醒使用者：本软件所有信息仅供参考，不做个别诊断、用药和使用的根据。本软件致力于提供正确、完整的健康及医疗信息，但不保证信息的正确性、准确性、可靠性、时效性和完整性，不对信息做出任何种类的保证，这信息也许已经过期，且本软件不承诺更新它们。本软件所提供的任何健康及医疗信息，仅供参考。一切因使用本软件信息而造成的任何意外、损失或损害，均由信息使用方自行负责，本软件概不负责，亦不承担任何直接的、间接的、特殊的、连带的法律责任。</string>
    <string name="disclaimer_20">2、本软件所刊载的各类形式(包括但不仅限于文字、图片、图表)的作品（包括广告等）仅供参考使用，并不代表本软件同意其说法或描述，仅为提供更多信息，也不构成任何方面建议。对于用户根据本软件提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本软件不承担任何形式的责任。</string>
    <string name="disclaimer_21">3、凡在本软件登记注册的用户，您须自行负责对您的账户和密码保密，且须对您的账户和密码下发生的所有活动承担全部责任。</string>
    <string name="disclaimer_22">4、权利人自愿同意不做任何妨碍或者破坏服务（或与服务连接的服务器及网络）的任何活动。若因散布谣言、造假、谩骂等原因而被禁止本软件对其服务的，本软件均免责。</string>
    <string name="disclaimer_23">5、当政府部门、司法机关等依照法定程序要求本软件披露个人资料时，本软件将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，本软件均得免责。</string>
    <string name="disclaimer_24">6、由于与本软件链接的其他软件或网页所造成之个人资料泄露及由此而导致的任何法律争议和后果，本软件均得免责。</string>
    <string name="disclaimer_25">7、由于用户将个人密码告知他人或与他人共享注册帐户，由此导致的任何个人资料泄露，本软件均得免责。</string>
    <string name="disclaimer_26">8、任何由于黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营的不可抗力而造成的个人资料泄露、丢失、被盗用或被窜改等，本软件均得免责。</string>
    <string name="disclaimer_27">9、除本软件注明之服务条款外，其他一切因使用本软件而引致之任何意外、疏忽、诽谤、版权或知识产权侵犯及其所造成的损失(包括因下载而感染手机病毒)，本软件概不负责，亦不承担任何法律责任。</string>
    <string name="disclaimer_28">10、用户自行同意本软件可自行更新、升级或关闭，而无需经过您的同意。您可以在任何时候停止使用本软件，而无需特别通知我公司。</string>
    <string name="disclaimer_29">11、用户明确同意对本软件服务的使用承担全部风险，并对因其使用本软件服务而产生的一切后果承担全部风险，本软件明确表示对用户不作任何类型的担保，也不承担任何责任，但是对商业性的隐含担保，特定目的和不违反规定的适当担保除外。本软件不担保网络服务一定能满足用户的要求，也不担保网络服务不会中断，对服务的连续性、及时性、安全性、准确性都不作担保。对于因不可抗力或本软件不能避免或控制的原因及其他原因造成的网络服务中断或其它缺陷，本软件不承担任何责任。</string>
    <string name="disclaimer_30">法律责任</string>
    <string name="disclaimer_31">1、凡以任何方式登陆本软件或直接、间接使用本软件者，均视为自愿同意本软件声明的约束。</string>
    <string name="disclaimer_32">2、本声明未涉及的问题参见国家有关法律法规，当本声明与国家法律法规冲突时，以国家法律法规为准。</string>
    <string name="disclaimer_33">法律适用与司法管辖</string>
    <string name="disclaimer_34">若因本软件产生任何诉诸于诉讼程序的法律争议，将以本院所在的法院为管辖法院，除非中国法律对此有强制性规定。</string>
    <string name="disclaimer_35">本院保留对本声明作出不定时修改的权利。</string>
    <string name="disclaimer_36">本软件之声明以及其修改权、更新权及最终解释权均属本院所有。</string>
    <string name="disclaimer_37">本软件由杭州卓健信息科技有限公司提供技术支持。</string>
    <string name="error_service">服务器出错</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="register_note_title1">预约须知：</string>
    <string name="register_note_1">1、 本院所有号源均可预约挂号，持有本院就诊卡者可预约提前半天到一周的号。</string>
    <string name="register_note_2">2、 手机预约挂号采用实名制，预约时须如实提供患者本人的姓名、身份证号码、就诊卡号和联系方式等信息。</string>
    <string name="register_note_3">3、 用户应在预约前确定好自己需要的科室及专家，预约成功后，挂号信息不可更改，如要更改需取消原先预约，再重新预约。</string>
    <string name="register_note_4">4、 预约成功后，您注册注明的手机号会收到短信，请根据短信提示时间取号。就诊当日，就诊卡预约用户可以在提示短信的指定时间前，在APP上取号（就诊卡上有足够挂号费），过时视为自动放弃。</string>
    <string name="register_note_5">5、 取号后请按就诊序号就诊。</string>
    <string name="register_note_6">6、 当日挂号可以直接挂当日上午或者当日下午的门诊号源，夏令挂号时间段为7：00–11：00，12：00–16：30；冬令挂号时间段为7：30–11点，12:00–16：00。</string>
    <string name="register_note_7">7、 如出现不可避免的医生停诊情况，给您造成不便，敬请原谅。工作人员会通过电话或短信方式通知已预约的用户，请用户配合更改就诊日期或更换其他医生。</string>
    <string name="register_note_8">8、 已成功预约的用户，如需取消预约，请在就诊日前提前通过相应预约渠道取消预约。若事先未取消预约又没有按时就诊的，3个月内累积3次将列入爽约名单，之后3个月内将不能进行预约挂号。</string>
    <string name="register_note_9">9、 咨询电话：967999</string>
    <string name="app_name">掌上温岭一院</string>
    <string name="app_type">104</string>
    <string name="hospital_name_all">温岭市第一人民医院</string>
    <string name="hospital_name">温岭市第一人民医院</string>
    <string name="hospital_location_province">浙江省</string>
    <string name="hospital_location_city">台州市</string>
    <string name="hospital_location_latitude">28.372887</string>
    <string name="hospital_location_longitude">121.374671</string>
    <string name="head_text">满意服务在%s</string>
    <string name="version_info">Android Demo</string>
    <string name="search_button">搜索</string>
    <string name="function_tip">正在开发，敬请期待…</string>
    <string name="function_tip_online">图文咨询：选择您要咨询的科室医生，发送图文信息，在线咨询实名医生，与医生零距离沟通。该功能正在开发，敬请期待…</string>
    <string name="exit_tip">请再按一次退出</string>
    <string name="back_home">返回首页</string>
    <string name="note_import">*</string>
    <string name="list_no_data">暂无数据</string>
    <string name="note_user_info">挂号信息属个人隐私，请妥善保管，防止泄漏。</string>
    <string name="fee">费用：%s 元</string>
    <string name="fee_simple">%s 元</string>
    <string name="dialog_loading_text">加载中…</string>
    <string name="list_end">已经是最后一页了</string>
    <string name="distance">%d 米</string>
    <string name="age">%s岁</string>
    <string name="sex_man">男</string>
    <string name="sex_feman">女</string>
    <string name="frist">第一题</string>
    <string name="last">上一题</string>
    <string name="next">下一题</string>
    <string name="submit">提 交</string>
    <string name="version">Android V %s</string>
    <string name="depart_list_title">科室列表</string>
    <string name="doctor_list_title">医生列表</string>
    <string name="note">注：</string>
    <string name="note_heigh">偏高</string>
    <string name="note_low">偏低</string>
    <string name="note_negative">阴性</string>
    <string name="note_positive">阳性</string>
    <string name="note_normal">无状态为正常</string>
    <string name="project_name">项目名称</string>
    <string name="project_result">结果</string>
    <string name="project_status">状态</string>
    <string name="baidu_init">百度地图初始化错误!</string>
    <string name="baidu_net">您的网络出错啦！</string>
    <string name="baidu_search">输入正确的检索条件！</string>
    <string name="baidu_key">请在 Application文件输入正确的授权Key！</string>
    <string name="baidu_no_data">抱歉，未找到结果</string>
    <string name="baidu_click_location">正在定位……</string>
    <string name="baidu_search_now">正在搜索……</string>
    <string name="report_tips_jcd">"*检查单查询目前可以查询B超、CT、X线、MRI的检查报告，不包括图像。 
*B超查询请在检查4小时后，进行查询。"</string>
    <string name="user_real_name_tip">请输入您的真实姓名</string>
    <string name="user_sex_text">性别：</string>
    <string name="user_name_text">姓 名：</string>
    <string name="user_basic_info">基本信息</string>
    <string name="user_register_info">挂号信息</string>
    <string name="user_id_card_text">身份证号：</string>
    <string name="user_id_card_tip">请输入您的身份证号</string>
    <string name="user_treate_card_text">就诊卡号：</string>
    <string name="user_treate_card_tip">请输入就诊卡号</string>
    <string name="user_name_tip_edit">请输入姓名</string>
    <string name="tool_btn_test">点击测试</string>
    <string name="tool_smoke_time">抽烟时间:</string>
    <string name="tool_smoke_acount">每天数量:</string>
    <string name="tool_smoke_unit_year">单位:年</string>
    <string name="tool_smoke_unit_num">单位:支</string>
    <string name="tool_smoke_unit_high">高</string>
    <string name="tool_smoke_unit_normal">中</string>
    <string name="tool_smoke_unit_low">低</string>
    <string name="tool_smoke_tarcontent">选择烟的焦油含量</string>
    <string name="tool_bmi_high">身高</string>
    <string name="tool_bmi_weight">体重</string>
    <string name="tool_bmi_cm">单位:厘米</string>
    <string name="tool_bmi_kg">单位:千克</string>
    <string name="more_feedback_1">您的意见将帮助我们改善产品和服务</string>
    <string name="more_feedback_2">请留下有效的联系方式，方便我们联系您！</string>
    <string name="more_feedback_hint_1">输入您要反馈的意见</string>
    <string name="more_feedback_hint_2">输入邮箱或手机号码</string>
</resources>