<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_header" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/margins" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_basic_info" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_list_top_unselect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" style="@style/ListItem">
                <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/note_import" />
                <TextView android:textSize="@dimen/basic_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/user_name_text" />
                <EditText android:textSize="@dimen/basic_text_size" android:id="@id/user_update_name" android:background="@null" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:hint="@string/user_real_name_tip" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_list_center_unselect" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ListItem">
                <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/note_import" />
                <TextView android:textSize="@dimen/basic_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/user_sex_text" />
                <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textColor="@color/checkbox_selector" android:id="@id/user_update_sex" android:layout_width="0.0dip" android:layout_height="fill_parent" android:checked="true" android:button="@drawable/chx_selector" android:text="@string/sex_man" android:layout_weight="1.0" />
                    <RadioButton android:textColor="@color/checkbox_selector" android:id="@id/user_update_sex_1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:button="@drawable/chx_selector" android:text="@string/sex_feman" android:layout_weight="1.0" />
                </RadioGroup>
            </LinearLayout>
            <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/user_register_info" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_list_top_unselect" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ListItem">
                <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/note_import" />
                <TextView android:textSize="@dimen/basic_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/user_id_card_text" />
                <EditText android:textSize="@dimen/basic_text_size" android:id="@id/user_update_idcard" android:background="@null" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:hint="@string/user_id_card_tip" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_list_center_unselect" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ListItem">
                <TextView android:textColor="@color/red" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/note_import" />
                <TextView android:textSize="@dimen/basic_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/user_treate_card_text" />
                <EditText android:textSize="@dimen/basic_text_size" android:id="@id/user_update_treate" android:background="@null" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:hint="@string/user_treate_card_tip" android:singleLine="true" />
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/note_user_info" />
        </LinearLayout>
    </ScrollView>
    <Button android:textSize="@dimen/title_text_size" android:textColor="@android:color/white" android:gravity="center" android:id="@id/submit" android:background="@drawable/color_type_button_left_corners" android:layout_margin="@dimen/margins" android:text="@string/submit" style="@style/ListItem" />
</LinearLayout>
