<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_header" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="13.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/black" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/more_feedback_1" />
            <EditText android:textSize="15.0sp" android:gravity="top" android:id="@id/feedback_content" android:background="@drawable/bg_list_one_unselect" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginTop="2.0dip" android:hint="@string/more_feedback_hint_1" android:maxLines="4" />
            <TextView android:textSize="14.0sp" android:textColor="@color/black" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/more_feedback_2" />
            <EditText android:textSize="15.0sp" android:textColor="#ffafafaf" android:id="@id/feedback_userinfo" android:background="@drawable/bg_list_one_unselect" android:paddingLeft="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:hint="@string/more_feedback_hint_2" android:singleLine="true" />
            <Button android:enabled="false" android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/feedback_submit" android:background="@drawable/color_type_button_right_corners" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_button_height" android:layout_marginTop="@dimen/margins" android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
